# silicone

./: .bandit.yml  .coveragerc  .gitattributes  .gitignore  .travis.yml  CHANGELOG.rst  LICENSE  MANIFEST.in  Makefile  README.rst  setup.cfg  setup.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci-cd-workflow.yml  test-pypi-install.yml
Input/: GWP100_unit_conversion.csv  GWP100_unit_conversion_AR4.csv  GWP100_unit_conversion_AR5.csv
docs/source/: cli.rst  conf.py  database-crunchers.rst  development.rst  index.rst  multiple-infillers.rst  stats.rst  time-projectors.rst  usage.rst  utils.rst
notebooks/: 00_Introductory_infilling.ipynb  01_Prefiltering.ipynb  02_Quantile_based_crunchers.ipynb  02_Rolling_windows_quantile_cruncher.ipynb  03_Ratio_based_crunchers.ipynb  04_Interpolation-based_crunchers.ipynb  05_Multiple_infillers.ipynb  06_Time_projectors.ipynb  CorrelationsBetweenGasesInvestigation.ipynb  CorrelationsBetweenGassesInvestigation.ipynb  Infilling_example_shell.ipynb  Interpolation-based_crunchers.ipynb  More_crunchers.ipynb  Multiple_infillers.ipynb  Rolling_Window_Quantile_cruncher.ipynb  background.ipynb  infilling.ipynb  introductory_infilling.ipynb  tests_sanitize.cfg
scripts/: PlotCorrelationsBetweenGasses.py  RunPlotCorrelationsBetweenGases.py  compare_crunchers.py  compare_scenarios.py  download_sr15_emissions.py  plot_correlations_between_gases.sh  run_calc_correlations_between_gases.py  run_plot_correlations_between_gases.py  run_silicone_on_xlsx.py  test_install.py
src/silicone/: __init__.py  _version.py  (+6 more)
tests/: conftest.py
(+68 files in other folders)
