[metadata]
description-file = README.rst

[tool:pytest]
testpaths = tests

[versioneer]
VCS = git
style = pep440
versionfile_source = src/silicone/_version.py
versionfile_build = silicone/_version.py
tag_prefix = v
parentdir_prefix = silicone-

[flake8]
max-line-length = 88
ignore = E203, E266, E501, W503
